fix: use correct property to align text

--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -51,7 +51,7 @@ a {
 }
 
 .section-header {
-	margin: var(--section-header-align);
+	text-align: var(--section-header-align);
 }
 
 .card-category, .section-tagline {
